fix scrollbar

--- a/HTML/footer.css
+++ b/HTML/footer.css
@@ -18,15 +18,20 @@ body {
     flex-grow: 1;
     margin-top: auto;
   }
+  html::-webkit-scrollbar{
+    width: 0px;
+    background-color: transparent;
+  }
+
   
   footer {
-    background-color: #333;
-    color: white;
-    padding: 10px;
-    text-align: center;
-    position: relative;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-  }
+      background-color: #333;
+      color: white;
+      padding: 10px;
+      text-align: center;
+      position: relative;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+    }
   
